style fixes on mobile

--- a/showcasepage/src/components/Style/input.sass
+++ b/showcasepage/src/components/Style/input.sass
@@ -352,13 +352,30 @@ footer
     p
       font-size: 0.9em
 
+  
+  nav
+    .HeaderLogo
+      position: absolute
+      left: 5%
+      top: 15%
+      .Logo
+        max-width: 40%
+    .navContainer
+      div
+        padding: 0 15px 0px 0px
+        a
+          text-decoration: none
+          color: white    
+          text-shadow: 2px 2px 2px black
+          cursor: pointer
+          font-size: 0.5em
 
   footer
+    padding-top: 15px
+    padding-bottom: 15px
     .footContainer
       width: 100%
       line-height: 2.0
-      padding-top: 15px
-      padding-bottom: 10px
       div
         font-size: 1.0em
       .icons
